Tried to manage the session

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.1.0",
+    "@types/js-cookie": "^3.0.6",
     "antd": "^5.25.1",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "framer-motion": "^12.11.4",
+    "js-cookie": "^3.0.5",
     "local-ssl-proxy": "^2.0.5",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
