--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.1.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/uuid": "^10.0.0",
     "antd": "^5.25.1",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
@@ -39,6 +40,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "uuid": "^11.1.0"
   }
 }
