--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,6 +19,7 @@
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "framer-motion": "^12.11.4",
+    "hls.js": "^1.6.2",
     "js-cookie": "^3.0.5",
     "local-ssl-proxy": "^2.0.5",
     "lucide-react": "^0.510.0",
